src/objects/Known__c.object
<CustomObject>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <referenceTo>Object__c</referenceTo>
        <relationshipLabel>Known</relationshipLabel>
        <relationshipName>Known</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Known</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Field__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>K-{00000}</displayFormat>
        <label>Known Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Known</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>